k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pastebin-backend
  namespace: pastebin
  labels:
    app: pastebin-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pastebin-backend
  template:
    metadata:
      labels:
        app: pastebin-backend
    spec:
      containers:
        - name: backend
          image: mmallaki13/pastebin-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: pastebin-backend
  namespace: pastebin
spec:
  selector:
    app: pastebin-backend
  ports:
    - port: 8000
      targetPort: 8000
