k8s/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pastebin-nginx
  namespace: pastebin
  labels:
    app: pastebin-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pastebin-nginx
  template:
    metadata:
      labels:
        app: pastebin-nginx
    spec:
      containers:
        - name: nginx
          image: mmallaki13/pastebin-nginx:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              memory: "32Mi"
              cpu: "25m"
            limits:
              memory: "64Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: pastebin-nginx
  namespace: pastebin
spec:
  selector:
    app: pastebin-nginx
  ports:
    - port: 80
      targetPort: 80
